--- a/angular2-pipes/app/app.component.html
+++ b/angular2-pipes/app/app.component.html
@@ -11,9 +11,9 @@
 
 <hr>
 <!--Custom pipes-->
-<h1>Custom Pipes</h1>
+<!--<h1>Custom Pipes</h1>
 <h2>Power Pipe</h2>
-<h3>{{powerNumber | power: 5}}</h3>
+<h3>{{powerNumber | power: 5}}</h3>-->
 
 <!--<input type="number" #expoVal (keyup) = "0">
 <h3>{{powerNumber}} to the power {{expoVal.value || 0}}: {{powerNumber | power: expoVal.value||0}}</h3>-->
